buildscript {
    ext {
        kotlin_version = '1.9.0'
    }

    repositories {
        google()
        mavenCentral()
    }

    dependencies {

        classpath 'com.android.tools.build:gradle:7.4.2'
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'

        classpath 'com.google.gms:google-services:4.4.2'
        // Alias : checkmate , password : Sahi@321
        // in the individual module build.gradle files
        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'

    }

}

allprojects {
    repositories {
        google()
        mavenCentral()
        maven { url 'https://jitpack.io' }
        maven { url 'https://maven.aliyun.com/repository/public' }
        maven { url 'http://raw.github.com/saki4510t/libcommon/master/repository/'
            allowInsecureProtocol = true
        }
        maven {
            url 'http://exchange.videoexpertsgroup.com:8080/repository/internal/'
            name 'VXG'
            allowInsecureProtocol = true
        }

    }
}

// Configure Java toolchain for all projects
subprojects {
    tasks.withType(JavaCompile) {
        options.compilerArgs += [
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.base/java.io=ALL-UNNAMED'
        ]
    }
    
    // Ensure consistent Java toolchain across all subprojects
    afterEvaluate {
        if (project.hasProperty('android')) {
            project.android.compileOptions {
                sourceCompatibility JavaVersion.VERSION_11
                targetCompatibility JavaVersion.VERSION_11
            }
        }
    }
}

task clean(type: Delete) {
    delete rootProject.buildDir
}